<resources>
    <string name="app_name">Nasa Gallary</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="nasa_gallary">Nasa Gallary</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_reload">Reload</string>
    <string name="background_image">Background Image</string>
    <string name="down_arrow">Down Arrow</string>
    <string name="description">Description</string>
    <string name="date_taken">Date Taken</string>
    <string name="media">Media</string>
</resources>