<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.graphics.drawable.Drawable"/>
        <import type="com.bumptech.glide.request.RequestListener"/>
        <variable
            name="listener"
            type="RequestListener&lt;Drawable>" />
        <variable
            name="nasaModel"
            type="com.nasa.gallary.presentation.home.item_model.NasaModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="@color/color_background"
                app:expandedTitleMarginEnd="@dimen/_16sdp"
                app:expandedTitleMarginStart="@dimen/_16sdp"
                app:expandedTitleTextAppearance="@style/CollapsingToolbarLayoutExpandedTextStyle"
                app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_collapseMode="parallax">

                    <ImageView
                        android:id="@+id/ivBackground"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/background_image"
                        android:transitionName="@{nasaModel.title}"
                        app:imageHD="@{nasaModel.hdurl}"
                        app:listener="@{listener}"/>

                </FrameLayout>

                <FrameLayout
                    android:id="@+id/fl_background"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.7" />

                <LinearLayout
                    android:id="@+id/stuff_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/TextAppearance.MaterialComponents.Headline3"
                        android:textSize="@dimen/_32sdp"
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingHorizontal="@dimen/_16sdp"
                        android:text="@{nasaModel.title}"
                        android:textColor="@color/white"
                        tools:text="Starbust Galaxy" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/copyright"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:alpha="0.7"
                        android:paddingHorizontal="@dimen/_16sdp"
                        android:paddingTop="@dimen/_16sdp"
                        android:text="@{nasaModel.copyrightText}"
                        android:textColor="@color/white"
                        style="@style/TextAppearance.MaterialComponents.Subtitle1"
                        android:textSize="@dimen/_12sdp"
                        tools:text="ESA/HubbleNasa" />

                    <ImageView
                        android:id="@+id/ivDownArrow"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_48sdp"
                        android:layout_gravity="bottom"
                        android:contentDescription="@string/down_arrow"
                        android:paddingVertical="@dimen/_10sdp"
                        android:onClick="@{(v) -> appbar.setExpanded(false, true) }"
                        android:src="@drawable/img_down_arrow"
                        app:gifRes="@{com.nasa.gallary.R.drawable.img_down_arrow}" />

                </LinearLayout>

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbarMain"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_marginTop="@dimen/_16sdp"
                    app:layout_collapseMode="pin"
                    app:navigationIcon="@drawable/ic_back"
                    android:background="@color/transparent"
                    app:popupTheme="@style/Theme.NasaGallary.PopupOverlay"
                    app:title="@{nasaModel.title}" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingHorizontal="@dimen/_16sdp"
                    android:paddingVertical="@dimen/_22sdp">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/description"
                        android:textColor="@color/color_on_surface"
                        style="@style/TextAppearance.MaterialComponents.Subtitle2" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:text="@{nasaModel.explanation}"
                        android:textColor="@color/color_on_surface"
                        style="@style/TextAppearance.MaterialComponents.Body2"
                        tools:text="Hello there" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:alpha="0.1"
                    android:background="@color/color_on_background" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingHorizontal="@dimen/_16sdp"
                    android:paddingVertical="@dimen/_22sdp">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/date_taken"
                        android:textColor="@color/color_on_surface"
                        style="@style/TextAppearance.MaterialComponents.Subtitle2" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:text="@{nasaModel.formattedDate}"
                        android:textColor="@color/color_on_background"
                        style="@style/TextAppearance.MaterialComponents.Body2"
                        tools:text="Hello there" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:alpha="0.1"
                    android:background="@color/color_on_background" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingHorizontal="@dimen/_16sdp"
                    android:paddingVertical="@dimen/_22sdp">


                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/media"
                        android:textColor="@color/color_on_surface"
                        style="@style/TextAppearance.MaterialComponents.Subtitle2" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:text="@{nasaModel.media_type}"
                        android:textColor="@color/color_on_background"
                        style="@style/TextAppearance.MaterialComponents.Body2"
                        tools:text="Hello there" />

                </LinearLayout>
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>